samples/_failures_safe/1761396825_ac5756_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb8dcfc9.c: In function ‘main’:
./samples/SAFE/__tmp_bb8dcfc9.c:175:11: error: ‘strcsp’ undeclared (first use in this function); did you mean ‘strcspn’?
  175 |     input[strcsp
      |           ^~~~~~
      |           strcspn
./samples/SAFE/__tmp_bb8dcfc9.c:175:11: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_bb8dcfc9.c:175:17: error: expected ‘]’ at end of input
  175 |     input[strcsp
      |                 ^
      |                 ]
./samples/SAFE/__tmp_bb8dcfc9.c:175:5: error: expected declaration or statement at end of input
  175 |     input[strcsp
      |     ^~~~~
